<resources>
    <string name="demo_activity">ActivityUtils Demo</string>
    <string name="demo_adapt_screen">AdaptScreenUtils Demo</string>
    <string name="demo_app">AppUtils Demo</string>
    <string name="demo_bar">BarUtils Demo</string>
    <string name="demo_brightness">BrightnessUtils Demo</string>
    <string name="demo_blur">BlurUtils Demo</string>
    <string name="demo_clean">CleanUtils Demo</string>
    <string name="demo_click">ClickUtils Demo</string>
    <string name="demo_bus">BusUtils Demo</string>
    <string name="demo_crash">CrashUtils Demo</string>
    <string name="demo_device">DeviceUtils Demo</string>
    <string name="demo_flashlight">FlashlightUtils Demo</string>
    <string name="demo_fragment">FragmentUtils Demo</string>
    <string name="demo_image">ImageUtils Demo</string>
    <string name="demo_keyboard">KeyboardUtils Demo</string>
    <string name="demo_language">Language Demo</string>
    <string name="demo_log">LogUtils Demo</string>
    <string name="demo_meta_data">MetaDataUtils Demo</string>
    <string name="demo_network">NetworkUtils Demo</string>
    <string name="demo_path">PathUtils Demo</string>
    <string name="demo_permission">PermissionUtils Demo</string>
    <string name="demo_phone">PhoneUtils Demo</string>
    <string name="demo_process">ProcessUtils Demo</string>
    <string name="demo_reflect">ReflectUtils Demo</string>
    <string name="demo_resource">ResourceUtils Demo</string>
    <string name="demo_screen">ScreenUtils Demo</string>
    <string name="demo_rom">RomUtils Demo</string>
    <string name="demo_sdcard">SDCardUtils Demo</string>
    <string name="demo_snackbar">SnackbarUtils Demo</string>
    <string name="demo_spStatic">SPStaticUtils Demo</string>
    <string name="demo_span">SpanUtils Demo</string>
    <string name="demo_toast">ToastUtils Demo</string>
    <string name="demo_vibrate">VibrateUtils Demo</string>
    <string name="activity_shared_element">Shared Element</string>
    <string name="activity_clz">Clz</string>
    <string name="activity_clz_opt">Clz Opt</string>
    <string name="activity_clz_anim">Clz Anim</string>
    <string name="activity_act_clz">Act Clz</string>
    <string name="activity_act_clz_opt">Act Clz Opt</string>
    <string name="activity_act_clz_shared_element">Act Clz Shared Element</string>
    <string name="activity_act_clz_anim">Act Clz Anim</string>
    <string name="activity_pkg_cls">Pkg Cls</string>
    <string name="activity_pkg_cls_opt">Pkg Cls Opt</string>
    <string name="activity_pkg_cls_anim">Pkg Cls Anim</string>
    <string name="activity_act_pkg_cls">Act Pkg Cls</string>
    <string name="activity_act_pkg_cls_opt">Act Pkg Cls Opt</string>
    <string name="activity_act_pkg_cls_shared_element">Act Pkg Cls Shared Element</string>
    <string name="activity_act_pkg_cls_anim">Act Pkg Cls Anim</string>
    <string name="activity_intent">Intent</string>
    <string name="activity_intent_opt">Intent Opt</string>
    <string name="activity_intent_shared_element">Intent Shared Element</string>
    <string name="activity_intent_anim">Intent Anim</string>
    <string name="activity_intents">Intents</string>
    <string name="activity_intents_opt">Intents Opt</string>
    <string name="activity_intents_anim">Intents Anim</string>
    <string name="activity_act_intents">Act Intents</string>
    <string name="activity_act_intents_opt">Act Intents Opt</string>
    <string name="activity_act_intents_anim">Act Intents Anim</string>
    <string name="activity_start_activities">Start Activities</string>
    <string name="activity_start_home_activity">Start Home Activity</string>
    <string name="activity_finish_activity">Finish MainActivity</string>
    <string name="activity_finish_to_activity">Finish To MainActivity</string>
    <string name="activity_finish_all_activities">Finish All Activities</string>
    <string name="app_install">Install Test App</string>
    <string name="app_install_tips">Test app have installed</string>
    <string name="install_successfully">Install successfully</string>
    <string name="install_unsuccessfully">Install unsuccessfully</string>
    <string name="app_uninstall">Uninstall Test App</string>
    <string name="app_uninstall_tips">Please install test app first</string>
    <string name="uninstall_successfully">Uninstall successfully</string>
    <string name="uninstall_unsuccessfully">Uninstall unsuccessfully</string>
    <string name="app_launch">Launch App</string>
    <string name="app_relaunch">Relaunch App</string>
    <string name="app_launch_details_settings">Launch App Details Settings</string>
    <string name="app_exit">Exit App</string>
    <string name="bar_about_status_bar">About Status Bar</string>
    <string name="bar_about_nav_bar">About Nav Bar</string>
    <string name="bar_about_notification_bar">About Notification Bar</string>
    <string name="bar_status_about">About Status</string>
    <string name="bar_status_visibility">Status Visibility</string>
    <string name="bar_status_light_mode">Light Mode</string>
    <string name="bar_status_set_color">Set Color</string>
    <string name="bar_status_set_alpha">Set Alpha</string>
    <string name="bar_status_set_image_view">Set Image View</string>
    <string name="bar_status_set_custom">Set Custom</string>
    <string name="bar_status_set_fragment">Set Fragment</string>
    <string name="bar_status_set_drawer">Set Drawer</string>
    <string name="bar_status_random_color">Random Color</string>
    <string name="bar_status_set_transparent">Set Transparent</string>
    <string name="bar_status_title_color">Color</string>
    <string name="bar_status_title_alpha">Alpha</string>
    <string name="bar_status_is_front">Front</string>
    <string name="bar_status_title_image_view">Image</string>
    <string name="bar_status_title_custom">Custom</string>
    <string name="bar_notification_about">About Notification</string>
    <string name="bar_notification_show">Show Notification And Hide After 2s</string>
    <string name="bar_nav_about">About Nav</string>
    <string name="bar_nav_visibility">Nav Visibility</string>
    <string name="bar_nav_color">Set Nav Color Random</string>
    <string name="brightness_auto_brightness">Auto Brightness</string>
    <string name="clean_internal_cache">Clean Internal Cache</string>
    <string name="clean_internal_files">Clean Internal Files</string>
    <string name="clean_internal_databases">Clean Internal Databases</string>
    <string name="clean_internal_sp">Clean Internal SP</string>
    <string name="clean_external_cache">Clean External Cache</string>
    <string name="click_scale_default">Click Scale Default(Global)</string>
    <string name="click_scale_custom">Click Scale Custom(Global)</string>
    <string name="click_global_debouncing">Click Global Debouncing</string>
    <string name="click_single_debouncing">Click Single Debouncing</string>
    <string name="click_multi">Click Multi</string>
    <string name="click_single_tip">The view does not respond to clicks within 5 seconds.</string>
    <string name="click_global_tip">The views which set global debouncing does not respond to clicks within 5 seconds.</string>
    <string name="bus_start_remote">Start Remote</string>
    <string name="bus_post">Post</string>
    <string name="bus_post_to_main">Post to Main</string>
    <string name="flashlight_status">Flashlight Status</string>
    <string name="fragment_zero">Fragment0</string>
    <string name="fragment_one">Fragment1</string>
    <string name="fragment_two">Fragment2</string>
    <string name="fragment_show_stack">Show Stack</string>
    <string name="fragment_add_child">Add Child</string>
    <string name="fragment_add_child_stack">Add Child Stack</string>
    <string name="fragment_add_hide">Add Hide</string>
    <string name="fragment_add_hide_stack">Add Hide Stack</string>
    <string name="fragment_add_demo1_show">Add Demo1 Show</string>
    <string name="fragment_pop">Pop</string>
    <string name="fragment_remove">Remove</string>
    <string name="fragment_pop_to_root">Pop To Root</string>
    <string name="fragment_hide_demo0_show_demo1">Hide Demo0 Show Demo1</string>
    <string name="fragment_hide_demo1_show_demo0">Hide Demo1 Show Demo0</string>
    <string name="fragment_replace">Replace</string>
    <string name="fragment_transition">Transition</string>
    <string name="image_src">Src</string>
    <string name="image_add_color">Add Color</string>
    <string name="image_scale">Scale</string>
    <string name="image_clip">Clip</string>
    <string name="image_skew">Skew</string>
    <string name="image_rotate">Rotate</string>
    <string name="image_to_round">To Round</string>
    <string name="image_to_round_border">To Round Border</string>
    <string name="image_to_round_corner">To Round Corner</string>
    <string name="image_to_round_corner_border">To Round Corner Border</string>
    <string name="image_add_corner_border">Add Corner Border</string>
    <string name="image_add_circle_border">Add Circle Border</string>
    <string name="image_add_reflection">Add Reflection</string>
    <string name="image_add_text_watermark">Add Text Watermark</string>
    <string name="image_add_image_watermark">Add Image Watermark</string>
    <string name="image_to_gray">Gray</string>
    <string name="image_fast_blur">Fast Blur</string>
    <string name="image_render_script_blur">Render Script Blur</string>
    <string name="image_stack_blur">Stack Blur</string>
    <string name="image_save">Save</string>
    <string name="image_compress_by_scale">Compress By Scale</string>
    <string name="image_compress_by_quality_half">Compress By Quality Half</string>
    <string name="image_compress_by_quality_max_size">Compress By Quality Max Size</string>
    <string name="image_compress_by_sample_size">Compress By Sample Size</string>
    <string name="network_open_wireless_settings">Open Wireless Settings</string>
    <string name="network_data_enabled">Mobile Data Enabled</string>
    <string name="network_wifi_enabled">Wifi Enabled</string>
    <string name="keyboard_hide_soft_input">Hide Soft Input</string>
    <string name="keyboard_show_soft_input">Show Soft Input</string>
    <string name="keyboard_toggle_soft_input">Toggle Soft Input</string>
    <string name="keyboard_show_dialog">Show Dialog</string>
    <string name="keyboard_close_dialog">Close Dialog</string>
    <string name="language">Language</string>
    <string name="snackbar_show_short">Show Short Snackbar</string>
    <string name="snackbar_show_short_with_action">Show Short Snackbar With Action</string>
    <string name="snackbar_show_long">Show Long Snackbar</string>
    <string name="snackbar_show_long_with_action">Show Long Snackbar With Action</string>
    <string name="snackbar_show_indefinite">Show Indefinite Snackbar</string>
    <string name="snackbar_show_indefinite_with_action">Show Indefinite Snackbar With Action</string>
    <string name="snackbar_add_view">Add View</string>
    <string name="snackbar_add_view_with_action">Add View With Action</string>
    <string name="snackbar_show_success">Show Success</string>
    <string name="snackbar_show_warning">Show Warning</string>
    <string name="snackbar_show_error">Show Error</string>
    <string name="snackbar_dismiss">Dismiss Snackbar</string>
    <string name="toast_show_short">Show Short</string>
    <string name="toast_show_long">Show Long</string>
    <string name="toast_show_green_font">Show Green Font</string>
    <string name="toast_show_bg_color">Show Bg Color</string>
    <string name="toast_show_bg_resource">Show Bg Resource</string>
    <string name="toast_show_span">Show Span</string>
    <string name="toast_show_custom_view">Show Custom View</string>
    <string name="toast_show_middle">Show Middle</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_show_toast_dialog">Show Toast Dialog</string>
</resources>