<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/spacing_16"
    android:paddingRight="@dimen/spacing_16">

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="activityClick"
        android:text="@string/demo_activity" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="adaptScreenClick"
        android:text="@string/demo_adapt_screen" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="appClick"
        android:text="@string/demo_app" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="barClick"
        android:text="@string/demo_bar" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="brightnessClick"
        android:text="@string/demo_brightness" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cleanClick"
        android:text="@string/demo_clean" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="crashClick"
        android:text="@string/demo_crash" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceClick"
        android:text="@string/demo_device" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="flashlightClick"
        android:text="@string/demo_flashlight" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fragmentClick"
        android:text="@string/demo_fragment" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="imageClick"
        android:text="@string/demo_image" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="keyboardClick"
        android:text="@string/demo_keyboard" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logClick"
        android:text="@string/demo_log" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="metaDataClick"
        android:text="@string/demo_meta_data" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="networkClick"
        android:text="@string/demo_network" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pathClick"
        android:text="@string/demo_path" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="permissionClick"
        android:text="@string/demo_permission" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="phoneClick"
        android:text="@string/demo_phone" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="processClick"
        android:text="@string/demo_process" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reflectClick"
        android:text="@string/demo_reflect" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resourceClick"
        android:text="@string/demo_resource" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="romClick"
        android:text="@string/demo_rom" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="screenClick"
        android:text="@string/demo_screen" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sdcardClick"
        android:text="@string/demo_sdcard" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="snackbarClick"
        android:text="@string/demo_snackbar" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spStaticClick"
        android:text="@string/demo_spStatic" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spannableClick"
        android:text="@string/demo_span" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toastClick"
        android:text="@string/demo_toast" />

    <Button
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="vibrateClick"
        android:text="@string/demo_vibrate" />

</LinearLayout>
