<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <Button
        android:id="@+id/showShortToastBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_short" />

    <Button
        android:id="@+id/showLongToastBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_long" />

    <Button
        android:id="@+id/showGreenFontBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_green_font" />

    <Button
        android:id="@+id/showBgColorBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_bg_color" />

    <Button
        android:id="@+id/showBgResourceBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_bg_resource" />

    <Button
        android:id="@+id/showSpanBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_span" />

    <Button
        android:id="@+id/showCustomViewBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_custom_view" />

    <Button
        android:id="@+id/showMiddleBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_middle" />

    <Button
        android:id="@+id/cancelToastBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_cancel" />

    <Button
        android:id="@+id/showToastDialogBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_show_toast_dialog" />
</LinearLayout>
